--- a/src/index.html
+++ b/src/index.html
@@ -42,91 +42,108 @@
       </ul>
     </div>
     <header>
-      <section class="general-content">
-        <div class = "top-bar">
-          <a href="index.html" class="site-title"
-            ><span class="logo" role="presentation"></span>
-            <span>National Park Service</span></a
-          >
-          <div class="search-div">
-            <a class="search" href="#park-footer">
-              <svg class="icon" width="24" height="24">
-                <use href="/WDD231-main/src/images/sprite.symbol.svg#search">
-                </use>
-              </svg>            
-            </a>
-              <svg class="icons">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink"            
-              xlink:href="/WDD231-main/src/images/sprite.symbol.svg#menu">
-              </use>
-              </svg>
-            </button>
+      <section class="global-header">
+        <a href="index.html" class="site-title"
+          ><span class="logo" role="presentation"></span>
+          <span>National Park Service</span></a
+        >
+        <div class="global-header__right">
+          <a class="search-icon" href="#park-footer">
+            <svg class="icon">
+              <use
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                xlink:href="/images/sprite.symbol.svg#search"
+              ></use>
+            </svg>
+            <span class="visually-hidden">Search</span>
+          </a>
+          <button id="global-nav-toggle">
+            <svg class="icon">
+              <use
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                xlink:href="/images/sprite.symbol.svg#menu"
+              ></use>
+            </svg>
+            <span class="visually-hidden">Open</span> Menu
+          </button>
+        </div>
+      </section>
+      <section id="park-header">
+        <div class="hero-banner">
+          <img src="" alt="" />
+          <div class="hero-banner__content">
+            <!-- <a href="#" class="hero-banner__title">Yellowstone</a>
+            <p class="hero-banner__subtitle">
+              <span>National Park</span>
+              <span>ID, MT, WY</span>
+            </p> -->
           </div>
         </div>
-
-    <div class = "site_poster">
-        <img class = "park-img" src="" alt="" />
-        <div class="caption">
-        <a href="#" class="caption-title"></a>
-        <p>
-            <span class="caption-desig" ></span>
-            <span class="caption-states" ></span>
-        </p>
-        </div>
-    </div>
-    <nav class="nav_bar">
-        <ul>
-        <li>
-          <p>Info</p>
-          <svg class="icons">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink"
-                xlink:href="/WDD231-main/src/images/sprite.symbol.svg#info">
-                </use>
-          </svg>
-        </a>
-        </li>
-        <li>
-            <p>Alerts</p>
-        <svg class="icons">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink"
-                xlink:href="/WDD231-main/src/images/sprite.symbol.svg#alert">
-                </use>                
-            </svg>
-            </a>
-        </li>
-        <li>
-            <p>Maps</p>
-            <svg class="icons">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink"
-                xlink:href="/WDD231-main/src/images/sprite.symbol.svg#location">
-                </use>
-            </svg>
-            </a>
-        </li>
-        <li>
-            <p>Calendar</p>
-            <svg class="icons">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink"
-                xlink:href="/WDD231-main/src/images/sprite.symbol.svg#calendar">
-                </use>
-            </svg>
-            </a>
-        </li>
-        <li>
-            <p>Fees</p>
-            <svg class="icons">
-                <use
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  xlink:href="/WDD231-main/src/images/sprite.symbol.svg#fee-22">
-                </use>
-        </svg>
-            </a>
-        </li>
-        </ul>
-    </nav>
+        <nav class="park-nav">
+          <ul>
+            <li>
+              <a href="#">
+                <span>Info</span>
+                <svg class="icon" role="presentation" focusable="false">
+                  <use
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xlink:href="/images/sprite.symbol.svg#info"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Alerts</span>
+                <svg class="icon" role="presentation" focusable="false">
+                  <use
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xlink:href="/images/sprite.symbol.svg#alert"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Maps</span>
+                <svg class="icon" role="presentation" focusable="false">
+                  <use
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xlink:href="/images/sprite.symbol.svg#location"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Calendar</span>
+                <svg class="icon" role="presentation" focusable="false">
+                  <use
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xlink:href="/images/sprite.symbol.svg#calendar"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Fees</span>
+                <svg class="icon" role="presentation" focusable="false">
+                  <use
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xlink:href="/images/sprite.symbol.svg#fee-22"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
       </section>
     </header>
-    <main id="main"></main>
-    <footer id="park-footer"></footer>
+    <main id="main">
+      <section class="intro"></section>
+      <section class="info"></section>
+    </main>
+    <footer id="park-footer" class="park-footer"></footer>
   </body>
 </html>
